...
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="@color/separator_card" />

        <ImageButton
            android:id="@+id/btEcstatic"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:src="@drawable/ic_mood_ecstatic"
            android:background="@drawable/selector"/>

    </LinearLayout>

    <EditText
        android:id="@+id/etNote"
        android:hint="Note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="255"/>

</LinearLayout>
