<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                        android:id="@+id/drawer_layout"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent">
        <FrameLayout
                     android:id="@+id/mainFragment"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
        </FrameLayout>


        <FrameLayout
            android:layout_gravity="start"
            android:id="@+id/drawerContent"
            android:layout_width="240dp"
            android:layout_height="match_parent">
        </FrameLayout>

</android.support.v4.widget.DrawerLayout>
